@@ -910,105 +910,6 @@ class tx_solr_Query {
 			unset($this->queryParameters['echoParams']);
 		}
 	}
-
-
-	// output
-
-
-	/**
-	 * Sets the target page Id for links
-	 *
-	 * @param	integer	Page Id links shall point to.
-	 */
-	public function setLinkTargetPageId($pageId) {
-		$this->linkTargetPageId = intval($pageId);
-	}
-
-	/**
-	 * Gets the target page Id for links.
-	 *
-	 * @return	integer	Page Id links are going to point to.
-	 */
-	public function getLinkTargetPageId() {
-		return $this->linkTargetPageId;
-	}
-
-	/**
-	 * Generates a html link
-	 *
-	 * @param	string	$linkText
-	 * @param	array	$additionalQueryParameters
-	 * @param	array	$aTagParameters
-	 * @return	a html link
-	 * @todo	merge $additionalQueryParameters and $typolinkOptions into one parameter
-	 */
-	public function getQueryLink($linkText, array $additionalQueryParameters = array(), array $typolinkOptions = array()) {
-		$cObj = t3lib_div::makeInstance('tslib_cObj');
-
-		$prefix = 'tx_solr';
-		$getPostParameters = t3lib_div::_GP($prefix);
-		$piVars = is_array($getPostParameters) ? $getPostParameters : array();
-
-		$queryParameters = array_merge(
-			$piVars,
-			$additionalQueryParameters
-		);
-		$queryParameters   = $this->removeUnwantedUrlParameters($queryParameters);
-		$queryGetParameter = '&' . $this->queryGetParameter . '=' . $this->getKeywords();
-
-		$linkConfiguration = array(
-			'useCacheHash'     => FALSE,
-			'no_cache'         => FALSE,
-			'parameter'        => $this->linkTargetPageId,
-			'additionalParams' => t3lib_div::implodeArrayForUrl('', array($prefix => $queryParameters), '', TRUE) . $queryGetParameter
-		);
-
-			// merge linkConfiguration with typolinkOptions
-		$linkConfiguration = array_merge($linkConfiguration, $typolinkOptions);
-
-		return $cObj->typoLink($linkText, $linkConfiguration);
-	}
-
-		// @todo	change $additionalQueryParameters to allow more typolink options / @see getQueryLink()
-	public function getQueryUrl(array $additionalQueryParameters = array()) {
-		$cObj = t3lib_div::makeInstance('tslib_cObj');
-
-		$prefix = 'tx_solr';
-		$getPostParameters = t3lib_div::_GP($prefix);
-		$piVars = is_array($getPostParameters) ? $getPostParameters : array();
-
-		$queryParameters = array_merge(
-			$piVars,
-			$additionalQueryParameters
-		);
-		$queryParameters   = $this->removeUnwantedUrlParameters($queryParameters);
-		$queryGetParameter = '&' . $this->queryGetParameter . '=' . $this->getKeywords();
-
-		$linkConfiguration = array(
-			'useCacheHash'     => FALSE,
-			'no_cache'         => FALSE,
-			'parameter'        => $this->linkTargetPageId,
-			'additionalParams' => $queryGetParameter . t3lib_div::implodeArrayForUrl('', array($prefix => $queryParameters), '', TRUE)
-		);
-
-		return $cObj->typoLink_URL($linkConfiguration);
-	}
-
-	/**
-	 * Filters out unwanted parameters when building query URLs
-	 *
-	 * @param	array	An array of parameters that shall be used to build a URL.
-	 * @return	array	Array with wanted parameters only, ready to be used for URL building.
-	 */
-	public function removeUnwantedUrlParameters($urlParameters) {
-		$unwantedUrlParameters = array('resultsPerPage', 'page');
-
-		foreach ($unwantedUrlParameters as $unwantedUrlParameter) {
-			unset($urlParameters[$unwantedUrlParameter]);
-		}
-
-		return $urlParameters;
-	}
 }
 
 
